# exercises

./: .gitignore
advent_of_code_2017/day_01/: 01.py  02.py
advent_of_code_2017/day_02/: 01.py  02.py
advent_of_code_2017/day_03/: 01.py  02.py
advent_of_code_2017/day_04/: 01.py  02.py
advent_of_code_2017/day_05/: 01.py  02.py
advent_of_code_2017/day_06/: 01.py
advent_of_code_2017/day_07/: 01.py  02.py
advent_of_code_2017/day_08/: 01.py
advent_of_code_2017/day_09/: 01.py
advent_of_code_2017/day_10/: 01.py  02.py
advent_of_code_2017/day_11/: 01.py
advent_of_code_2019/day_02/: Cargo.toml
advent_of_code_2019/day_02/src/: main.rs
advent_of_code_2020/: input_21  solve_01.py  solve_02.py  solve_03.py  solve_04.py  solve_05.py  solve_06.ml  solve_06.py  solve_07.py  solve_08.py  solve_09.py  solve_10.py  solve_11.py  solve_12.py  solve_13.py  solve_14.py  solve_15.py  solve_16.py  solve_17.py  solve_18.py  solve_19.py  solve_20.py  solve_21.py  solve_22.py  solve_23.py  solve_24.py  solve_25.py
advent_of_code_2021/: solve_01.py  solve_02.py  solve_03.py  solve_04.py  solve_05.py  solve_06.py  solve_07.py  solve_08.py  solve_09.py  solve_10.py  solve_11.py  solve_12.py  solve_13.py  solve_14.py  solve_15.py
advent_of_code_2022/: Cargo.toml
advent_of_code_2023/: solve_01.py  solve_02.py
cryptopals/: Pipfile
euler/: 001.hs  002.hs  006.hs  007.hs  008.hs  011.hs  012.hs  013.hs  014.hs  020.hs  021.hs  022.hs  023.hs  027.hs  029.hs  030.hs  032.hs  033.hs  034.hs  038.hs  039.hs  048.hs
euler/haskell/: 003.hs  (+19 more)
neural_networks/: MNIST GAN.ipynb
(+69 files in other folders)
