[package]
name = "day_02"
version = "0.1.0"
authors = ["Willem Melching <willem.melching@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent = { path = "../advent" }
num-derive = "0.3.0"
num-traits = "0.2"
num = "0.2.0"
